force-app/main/default/objects/Financial_Aid_Application__c/Financial_Aid_Application__c.object-meta.xml
<CustomObject>
    <label>Financial Aid Application</label>
    <nameField>
        <label>Financial Aid Applications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>