force-app/main/default/objects/Financial_Aid_Application__c/fields/CircEsteem_Employee_Notes__c.field-meta.xml
<CustomField>
    <fullName>CircEsteem_Employee_Notes__c</fullName>
    <label>CircEsteem Employee Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>