force-app/main/default/objects/Financial_Aid_Application__c/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Aid Applications</relationshipLabel>
    <relationshipName>Financial_Aid_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>