force-app/main/default/objects/Financial_Aid_Application__c/fields/Household_Size_Number_of_Adults__c.field-meta.xml
<CustomField>
    <fullName>Household_Size_Number_of_Adults__c</fullName>
    <label>Household Size - Number of Adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>