force-app/main/default/objects/Financial_Aid_Application__c/fields/Optional_Letter__c.field-meta.xml
<CustomField>
    <fullName>Optional_Letter__c</fullName>
    <label>Optional Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>