force-app/main/default/objects/Financial_Aid_Application__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Aid Applications</relationshipLabel>
    <relationshipName>Financial_Aid_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>